[package]
name = "happyyear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.76"
chrono = "0.4"
chrono-tz = "0.8.4"
rand = "0.8.5"
trust-dns-resolver = "0.23.2"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "happyyear"
path = "src/main.rs"
